--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.18",
     "antd": "^5.14.0",
+    "classnames": "^2.5.1",
+    "css-loader": "^6.10.0",
     "normalize-scss": "^8.0.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.34",
@@ -22,7 +24,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript-plugin-css-modules": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,8 +52,6 @@
   },
   "devDependencies": {
     "@types/react-router": "^5.1.20",
-    "@types/react-router-dom": "^5.3.3",
-    "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4"
+    "@types/react-router-dom": "^5.3.3"
   }
 }
