--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
+    "@effector/reflect": "^9.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,16 +13,21 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.18",
     "antd": "^5.14.0",
+    "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "css-loader": "^6.10.0",
+    "effector": "^23.2.0",
+    "effector-react": "^23.2.0",
     "normalize-scss": "^8.0.0",
     "normalize.css": "^8.0.1",
+    "normalizr": "^3.6.2",
     "postcss": "^8.4.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "sass": "^1.70.0",
     "typescript": "^4.9.5",
     "typescript-plugin-css-modules": "^5.1.0"
